[package]
name = "tinymd"
version = "0.1.0"
authors = ["Oren <orengolan@gmail.com>"]
edition = "2018"
description = "A tiny markdown compiler based on Jesse's tutorials."
homepage = "https://oren.github.io/articles/rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
